feat: add ping api
